INT-55 Modify home_video_audio.html

--- a/home_video_audio.html
+++ b/home_video_audio.html
@@ -98,7 +98,7 @@
         <div class="wrapper">
           <div class="videos">
             <div>
-              <video width="560" height="315" controls>
+              <video width="560" height="315" controls loop autoplay muted>
                 <source src="/video/video1.mp4" type="video/mp4" />
               </video>
               <figure>
@@ -114,11 +114,11 @@
             </div>
 
             <div>
-              <video width="560" height="315" controls>
-                <source src="/video/video1.mp4" type="video/mp4" />
+              <video width="560" height="315" controls loop autoplay muted>
+                <source src="/video/video2.mp4" type="video/mp4" />
               </video>
               <figure>
-                <figcaption>Listen Dua Lipa:</figcaption>
+                <figcaption>Listen Bebe Rexha:</figcaption>
                 <audio
                   controls
                   src="/audio/ytmp3free.cc_dua-lipa-dont-start-now-official-music-video-youtubemp3free.org.mp3"
