--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 }
         /*Stilizimi i pjesës body dhe titullit*/
             body{
-                background-color: whitesmoke;
+                background-color: white;
             }
             h1{
                 background-image: url("images/black.jpg");
