--- a/contact.html
+++ b/contact.html
@@ -100,9 +100,17 @@
             }
         /* Stilizimi i butonit */
             .button{
-                color:white;
-                background-color: rgb(78, 9, 9);
+                color:#fff;
+                background-color: #bda87f;
                 text-align: center;
+            }
+             .button:hover{
+              background: #000;
+              color: #6f6f6f;
+              transition-duration: 0.3s;
+            }
+            .button:hover:after{
+              content:"->";
             }
             .responsive-map{
         overflow: hidden;
