--- a/shopdetail.html
+++ b/shopdetail.html
@@ -90,11 +90,19 @@
       }
       /* Rregullimi i button-it */
       .button {
-        color: white;
-        background-color: rgb(78, 9, 9);
+        color: #fff;
+        background-color: #bda87f;
         text-align: center;
         margin: -750px 100px 200px 870px;
       }
+      .button:hover{
+              background: #000;
+              color: #6f6f6f;
+              transition-duration: 0.3s;
+            }
+        .button:hover:after{
+              content:"->";
+            }
       .responsive-map {
         overflow: hidden;
         padding-bottom: 56.25%;
