--- a/contact.html
+++ b/contact.html
@@ -126,13 +126,21 @@
         position:absolute;
         }
         .position{
-          color:white;
-          background-color: rgb(78, 9, 9);
+          color:#fff;
+          background-color: #bda87f;
           text-align: center;
           height: 40px;
           width: 180px;
           margin-right: 150px;
           margin-left: 150px;
+        }
+        .position:hover{
+            background:#000;
+            color:#6f6f6f;
+            transition-duration: 0.3s;
+        }
+        .position:hover:after{
+            content:"->";
         }
            .footer-content {
         display: flex;
