--- a/contact.html
+++ b/contact.html
@@ -465,7 +465,7 @@
     
     function getLocation() {
       if (navigator.geolocation) {
-        navigator.geolocation.watchPosition(showPosition);
+        navigator.geolocation.getCurrentPosition(showPosition);
       } else { 
         x.innerHTML = "Geolocation is not supported by this browser.";
       }
