--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                 background-color: white;
             }
             h1{
-                background-image: url("images/black.jpg");
+                background-image: url("images/geom.jpg");
             }
         /*Tabela e pjesës së kontaktit */
             table{
