--- a/shopdetail.html
+++ b/shopdetail.html
@@ -70,7 +70,7 @@
         background-color: white;
       }
       h1 {
-        background-image: url("images/black.jpg");
+        background-image: url("images/geom.jpg");
       }
       /* Rregullimi i tabelës së parë*/
       table {
