--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
         background-color: white;
       }
       h1 {
-        background-image: url("images/black.jpg");
+        background-image: url("images/geom.jpg");
       }
       /* Rregullimi i përbashkët i div-ave */
       .div1,
